JVMCI exception Translation can fail in TranslatedException.<clinit>

XMLWordPrintable

    • b11

        ### TRACE 1: Test started.
        ### TRACE 1: RNG seed = -1042559397898730227 (0xf18815c05700450d)
        For random generator using seed: -1042559397898730227
        To re-run test with same seed value please add "-Djdk.test.lib.random.seed=-1042559397898730227" to command line.
        java.lang.OutOfMemoryError: Metaspace
                at jdk.internal.vm.TranslatedException.encodeThrowable(java.base@21-galahadeestaging/TranslatedException.java:176)
                at jdk.internal.vm.TranslatedException.<clinit>(java.base@21-galahadeestaging/TranslatedException.java:61)
                at jdk.internal.vm.VMSupport.encodeThrowable(java.base@21-galahadeestaging/VMSupport.java:171)
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/workspace/open/src/hotspot/share/compiler/compileBroker.cpp:1966), pid=3899965, tid=3899981
        # fatal error: exception should have been handled
        #
        # JRE version: Java(TM) SE Runtime Environment (21.0+1) (fastdebug build 21-galahadeestaging+1-LTS-68)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-galahadeestaging+1-LTS-68, compiled mode, sharing, jvmci, jvmci compiler, compressed class ptrs, g1 gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x9fe471] CompileBroker::compiler_thread_loop()+0x771

        Current CompileTask:
        JVMCI-native: 471139 6229 b vm.mlvm.hiddenloader.share.HiddenkTestee01/0x000000080100b000::<clinit> (33 bytes)

        Stack: [0x00007fa93f117000,0x00007fa93f318000], sp=0x00007fa93f316c50, free space=2047k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x9fe471] CompileBroker::compiler_thread_loop()+0x771 (compileBroker.cpp:1966)
        V [libjvm.so+0xeb66cc] JavaThread::thread_main_inner()+0xcc (javaThread.cpp:719)
        V [libjvm.so+0x179516a] Thread::call_run()+0xba (thread.cpp:217)
        V [libjvm.so+0x149562c] thread_native_entry(Thread*)+0x11c (os_linux.cpp:778)

              Assignee:
              Douglas Simon
              Reporter:
              Douglas Simon
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: